# ModbusTest

./: LICENSE  README.md
Hardware/ailink_cofee_mt3620/: ailink_cofee_mt3620.json.bak
Hardware/ailink_cofee_mt3620/inc/hw/: ailink_cofee_mt3620.h
Hardware/ailink_wfm620rsc1/: ailink_wfm620rsc1.json.bak  enc28j60-isu0-int5.imagepackage  sample_hardware.json  sample_hardware.json.bak
Hardware/ailink_wfm620rsc1/inc/hw/: sample_hardware.h
src/: CMakeLists.txt  app_manifest.json  led.c  led.h  main.c  modbus.c  modbus.h  modbus_rtu.c  modbus_rtu.h  utils.c  utils.h
